@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-
-    /* (c) https://github.com/MontiCore/monticore */
+    (c) https://github.com/MontiCore/monticore
 
     The license generally applicable for this project
     can be found under https://github.com/MontiCore/monticore.
@@ -34,15 +33,19 @@
     <properties>
     
         <!-- USE THIS VARIABLE TO SET THE VERSION OF THIS PROJECT AND ALL SUB PROJECTS -->
-        <revision>2.0.1-SNAPSHOT</revision>
+        <revision>2.0.2</revision>
         
-        <commons.version>1.0.7</commons.version>
+        <!-- USE THESE TO SET THE VERSIONS OF THE DEPENDENCIES FOR ALL THE SUB-PROJECTS -->
+        <commons.version>1.0.9</commons.version>
+        <controller.version>1.0.3</controller.version>
+        <server.version>1.0.7</server.version>
+        <rmimodelserver.version>1.1.3</rmimodelserver.version>
         
         <assembly.plugin>2.5.4</assembly.plugin>
         <compiler.plugin>3.3</compiler.plugin>
         <source.plugin>2.4</source.plugin>
 		<java.version>1.8</java.version>
-        <jacoco.plugin>0.8.1</jacoco.plugin>
+        <jacoco.plugin>0.8.2</jacoco.plugin>
     </properties>
     <!-- PROJECT DEPENDENCIES -->
     <dependencies>
@@ -79,7 +82,7 @@
         <dependency>
             <groupId>montisim</groupId>
             <artifactId>commons</artifactId>
-            <version>1.0.6</version>
+            <version>${commons.version}</version>
         </dependency>
 
     </dependencies>
@@ -159,6 +162,9 @@
                 <version>2.22.1</version>
                 <configuration>
                     <useSystemClassLoader>false</useSystemClassLoader>
+                    <forkCount>1</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
                 </configuration>
             </plugin>
             <plugin>
