@@ -74,6 +74,9 @@
                     <useSystemClassLoader>false</useSystemClassLoader>
                     <!-- Set root directory to ensure same execution context in subprojects (e.g. for Log in test mode) -->
                     <workingDirectory>${project.parent.basedir}</workingDirectory>
+                    <forkCount>1</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
                 </configuration>
             </plugin>
         </plugins>
